// for validation examples
// https://github.com/bufbuild/protovalidate/tree/main/examples

syntax = "proto3";
package internal_g_rpc_gen;

option go_package = "discover-serivce/internal/gRPC/gen";

import "buf/validate/validate.proto";

message RegisterRequest {
  string path = 1 [(buf.validate.field).cel = {
    id: "path",
    message: "Path is required",
    expression: "this != ''",
  }];

  string url = 2 [(buf.validate.field).cel = {
    id: "url",
    message: "Url is required",
    expression: "this != ''",
  }];
}

message RegisterResponse {
  string status = 1;
  string message = 2;
}

message DiscoverRequest {
  string path = 1 [(buf.validate.field).cel = {
    id: "path",
    message: "Path is required",
    expression: "this != ''",
  }];
}

message DiscoverResponse {
  string status = 1;
  string message = 2;
  repeated string urls = 3;
}

service Discovery {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Discover(DiscoverRequest) returns (DiscoverResponse);
}
